--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,3 @@
-<ul class="links">
-  <%= menu_link_to "このサイトについて", about_path %>
-  <li>
-    Copyright (C) <%= link_to "Oiax Inc.", "http://www.oiax.co.jp/" %>
-    2007-2018
-  </li>
-</ul>
+<%= link_to "このサイトについて", about_path %> |
+Copyright (C) <%= link_to "Oiax Inc.", "http://www.oiax.co.jp/" %>
+2007-2018
