--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,17 +1,11 @@
-<%= image_tag("logo.gif", size: "272x48", alt: "Morning Glory") %>
+<%= image_tag "logo.gif", size: "272x48", alt: "Morning Glory" %>
 
-<% if current_member %>
-  <ul class="account-menu">
-    <%= menu_link_to current_member.name + "さん", :account %>
-    <%= menu_link_to "ログアウト", :session,
-          method: :delete, data: { confirm: "ログアウトしますか？" } %>
+<nav class="menubar">
+  <ul>
+    <%= menu_link_to "TOP", :root %>
+    <%= menu_link_to "ニュース", "#" %>
+    <%= menu_link_to "ブログ ", "#" %>
+    <%= menu_link_to "会員名簿", "#" %>
+    <%= menu_link_to "管理ページ", "#" %>
   </ul>
-<% end %>
-
-<%=
-  if controller.kind_of?(Admin::Base)
-    render "shared/admin_menubar"
-  else
-    render "shared/menubar"
-  end
-%>
+</nav>
