--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -1,15 +1,14 @@
 <h2>ログイン</h2>
-<% if flash.alert %><p class="alert"><%= flash.alert %></p><% end %>
-<%= form_tag :session, id: "login-form" do %>
+<form id="login_form">
   <div>
     <label>ユーザー名：</label>
-    <input type="text" name="name">
+    <input type="text">
   </div>
   <div>
     <label>パスワード：</label>
-    <input type="password" name="password">
+    <input type="password">
   </div>
   <div>
     <input type="submit" value="ログイン">
   </div>
-<% end %>
+</form>
